--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ body {
 
 .footer-wrapper {
   background-color: #2e2f42;
+  height: 312px;
 }
 
 .footer-dscr {
@@ -64,6 +65,7 @@ body {
 a {
   text-decoration: none;
   color: currentColor;
+  padding: 0;
 }
 
 a:hover {
@@ -71,6 +73,7 @@ a:hover {
 }
 
 ul {
+  padding-left: 0;
   list-style-type: none;
 }
 
@@ -85,6 +88,8 @@ ul {
 
 .maine-wrapper {
   background: #2e2f42;
+  width: 100%;
+  height: 600px;
 }
 
 .content-list-dscr {
@@ -114,14 +119,31 @@ ul {
 }
 
 .team-list-item {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  width: 264px;
+  height: 380px;
   background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .team-wrapper {
   background-color: #f4f4fd;
+  width: 100%;
+  height: 732px;
 }
 
 .button-service {
+  border-radius: 4px;
+  padding: 16px 32px;
+  box-sizing: border-box;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -134,4 +156,160 @@ ul {
 .button-service:hover,
 .button-service:focus {
   background-color: #404bbf;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  max-width: 1440px;
+  padding-left: 156px;
+  padding-right: 156px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.header-wrapper {
+  border-bottom: 1px solid #e7e9fc;
+  width: 100%;
+}
+
+.header-wrapper .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-header-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  gap: 76px;
+}
+.nav-header-wrapper ul {
+  display: flex;
+  justify-content: flex-start;
+  gap: 40px;
+}
+
+.address-header ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 40px;
+}
+
+.maine-wrapper .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 48px;
+  padding-top: 188px;
+  padding-left: 472px;
+  padding-right: 472px;
+  padding-bottom: 188px;
+}
+
+.content-wrapper .container {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.content-wrapper ul {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.content-wrapper ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 8px;
+}
+
+.team-wrapper .container {
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.team-wrapper ul {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.team-list-item .thumb-team {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.portfolio-wrapper .container {
+  display: flex;
+
+  flex-direction: column;
+  gap: 72px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-wrapper ul {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.portfolio-list-item {
+  width: 360px;
+  height: 420px;
+}
+
+.portfolio-list-item .thumb-team {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+  width: 360px;
+  height: 120px;
+}
+
+.footer-wrapper .container {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 16px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-right: 1020px;
 }
