--- a/css/styles.css
+++ b/css/styles.css
@@ -23,12 +23,12 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
   color: #4d5ae5;
 }
 
 .logo-header {
   color: #2e2f42;
-  margin-right: 76px;
 }
 
 .address-header {
@@ -47,7 +47,7 @@ body {
   color: #404bbf;
 }
 
-.logo .logo-footer {
+.footer-link .logo-footer {
   color: #f4f4fd;
 }
 
@@ -95,12 +95,14 @@ ul {
   color: #fff;
 }
 
-.maine-wrapper .container {
+.maine-wrapper {
   background: #2e2f42;
   height: 600px;
   width: 100%;
   padding-top: 188px;
   padding-bottom: 188px;
+}
+.maine-wrapper .container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -164,9 +166,6 @@ ul {
 }
 
 .team-list-item .thumb-team {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
   box-sizing: border-box;
@@ -177,9 +176,13 @@ ul {
 
 .team-list-item {
   display: flex;
-
   justify-content: center;
   flex-direction: row;
+}
+.team-list-item li {
+  width: calc((100% - 72px) / 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-wrapper {
@@ -188,9 +191,6 @@ ul {
   height: 732px;
   padding-top: 120px;
   padding-bottom: 120px;
-  display: flex;
-
-  flex-direction: row;
 }
 
 .button-service {
@@ -283,6 +283,10 @@ img {
   gap: 24px;
 }
 
+.content-wrapper ul li {
+  width: calc((100% - 72px) / 4);
+}
+
 .team-wrapper ul {
   display: flex;
   justify-content: space-between;
@@ -339,6 +343,14 @@ img {
 }
 
 .footer-link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-right: 76px;
+  color: #4d5ae5;
   display: inline-block;
   margin-bottom: 16px;
 }
